apps/llama-cpp-worker/overlays/nishir/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: llama-cpp-worker
  namespace: shikanime
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: llama-cpp
      app.kubernetes.io/name: llama-cpp-worker
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: llama-cpp
              app.kubernetes.io/name: llama-cpp
      ports:
        - port: rpc
